# HeatSurf

./: AUTHORS  CMakeLists.txt  README.md  TODO
doc/: Doxyfile  HeatSurf.tag
doc/html/: annotated.html  classCone-members.html  classCone.html  classCone2-members.html  classCone2.html  classCone2__coll__graph.map  classCone2__inherit__graph.md5  classCone__coll__graph.map  classCone__coll__graph.md5  classCone__inherit__graph.map  classCone__inherit__graph.md5  classCylinder-members.html  classCylinder.html  classCylinder__coll__graph.md5  classCylinder__inherit__graph.map  classElement-members.html  classElement.html  classGeometry-members.html  classGeometry.html  classGeometry__inherit__graph.map  classGeometry__inherit__graph.md5  classLinearSystem.html  classMatrix-members.html  classMatrix.html  classNode-members.html  classNode.html  classOgive-members.html  classOgive.html  classOgive__inherit__graph.map  classOgive__inherit__graph.md5  classParticle-members.html  classParticle.html  classRing-members.html  classRing.html  classRing__coll__graph.map  classRing__inherit__graph.md5  classSimulation-members.html  classSimulation.html  classTwoPlates-members.html  classTwoPlates.html  (+719 more)
doc/latex/: annotated.tex  classCone.tex  classCone2.tex  classCone2__inherit__graph.md5  classCone__coll__graph.md5  classCone__inherit__graph.eps  classCone__inherit__graph.md5  classCylinder.aux  classCylinder.tex  classCylinder__coll__graph.md5  classCylinder__inherit__graph.eps  classElement.aux  classElement.tex  classGeometry.aux  classGeometry.tex  classGeometry__inherit__graph.eps  classGeometry__inherit__graph.md5  classLinearSystem.tex  classMatrix.tex  classNode.aux  classNode.tex  classOgive.tex  classOgive__inherit__graph.md5  classParticle.aux  classParticle.tex  classRing.tex  classRing__inherit__graph.md5  classSimulation.aux  classSimulation.tex  classTwoPlates.aux  classTwoPlates.tex  classTwoPlates__coll__graph.eps  classTwoPlates__coll__graph.md5  classTwoPlates__inherit__graph.md5  classVector.tex  classcofe_1_1AbstractTensorRank4SS.tex  (+316 more)
src/: CMakeLists.txt  Makefile.am  cone.cpp  cone.h  cone2-bak.cpp  cone2-bak.h  cone2.cpp  cone2.h  cone3.cpp  cone3.h  cornerCylinder.cpp  cornerCylinder.h  cylinder.cpp  cylinder.h  edgeCylinder.cpp  edgeCylinder.h  element.cpp  element.h  geometry.cpp  geometry.h  heatsurf.cpp  newCylinder.cpp  newCylinder.h  node.cpp  node.h  ogive.cpp  ogive.h  particle.cpp  particle.h  plate.cpp  plate.h  ring.cpp  ring.h  simulation.cpp  simulation.h  twoplates.cpp  twoplates.h  window.cpp  window.h
templates/: cpp
(+141 files in other folders)
